Change contact template

--- a/app/templates/contact.hbs
+++ b/app/templates/contact.hbs
@@ -1,1 +1,16 @@
-{{outlet}}
+<p>We are Super Rentals, so do not contact us.</p>
+<p>We will contact You (unless we wont).</p>
+
+<p>Leave us alone.</p>
+
+<p>
+  Super Rentals Super Secret HQ
+  <address>
+    1212 This Does Not Concern You Avenue<br>
+    HiddenHQ, OR 97233
+  </address>
+</p>
+
+<p><a href="tel:503.555.1212">(503)555-1212</a></p>
+
+<p><a href="mailto:superrentalsrep@superrentals.com">superrentalsrep@superrentals.com</a></p>
