Add links to contact and about templates
using ember helper link-to

--- a/app/templates/about.hbs
+++ b/app/templates/about.hbs
@@ -1,3 +1,5 @@
 <h2>About Super Rentals</h2>
 
 <p>It's like regular rentals, but super.</p>
+
+<p>{{#link-to "contact"}}Don't contact us!{{/link-to}}</p>
