--- a/app/templates/contact.hbs
+++ b/app/templates/contact.hbs
@@ -1,5 +1,5 @@
-<p>We are Super Rentals, so do not contact us.</p>
-<p>We will contact You (unless we wont).</p>
+<p>We are Super Rentals, so do not contact us.<br />
+We will contact You (unless we wont).</p>
 
 <p>Leave us alone.</p>
 
@@ -14,3 +14,5 @@
 <p><a href="tel:503.555.1212">(503)555-1212</a></p>
 
 <p><a href="mailto:superrentalsrep@superrentals.com">superrentalsrep@superrentals.com</a></p>
+
+<p>{{#link-to "about"}}Read more about us!{{/link-to}}</p>
