Change index template

--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,1 +1,7 @@
-{{outlet}}
+<h1>We are Super Rentals</h1>
+<h4>be humble and rent what we suggest</h4>
+
+<p>We are exclusive so prices are high and quality is regular.</p>
+
+{{#link-to "about"}}Read about us!{{/link-to}} |
+{{#link-to "contact"}}Try not to reach us!{{/link-to}}
