--- a/app/templates/components/rental-listing.hbs
+++ b/app/templates/components/rental-listing.hbs
@@ -3,3 +3,8 @@
 <p>Property type: {{rental.type}}</p>
 <p>Location: {{rental.city}}</p>
 <p>Number of bedrooms: {{rental.bedrooms}}</p>
+{{#if isImageShowing}}
+  <p><img src={{rental.image}} alt={{rental.type}} width="500"></p>
+{{else}}
+  <button {{action "imageShow"}}>Show image</button>
+{{/if}}
