Add some styles to application

--- a/app/templates/about.hbs
+++ b/app/templates/about.hbs
@@ -1,5 +1,8 @@
-<h2>About Super Rentals</h2>
+<div class="jumbo">
+  <div class="right tomster"></div>
+  <h2>About Super Rentals</h2>
 
-<p>It's like regular rentals, but super.</p>
+  <p>It's like regular rentals, but super.</p>
 
-<p>{{#link-to "contact"}}Don't contact us!{{/link-to}}</p>
+  <p>{{#link-to "contact"}}Don't contact us!{{/link-to}}</p>
+</div>
