--- a/app/templates/contact.hbs
+++ b/app/templates/contact.hbs
@@ -1,18 +1,21 @@
-<p>We are Super Rentals, so do not contact us.<br />
-We will contact You (unless we wont).</p>
+<div class="jumbo">
+  <div class="right tomster"></div>
+  <h2>Contact Us!</h2>
+  <p>We are Super Rentals, so do not contact us.<br />
+  We will contact You (unless we wont).</p>
 
-<p>Leave us alone.</p>
+  <p>Leave us alone.</p>
 
-<p>
-  Super Rentals Super Secret HQ
-  <address>
-    1212 This Does Not Concern You Avenue<br>
-    HiddenHQ, OR 97233
-  </address>
-</p>
+  <p>
+    Super Rentals Super Secret HQ
+    <address>
+      1212 This Does Not Concern You Avenue<br>
+      HiddenHQ, OR 97233
+    </address>
+  </p>
 
-<p><a href="tel:503.555.1212">(503)555-1212</a></p>
+  <p><a href="tel:503.555.1212">(503)555-1212</a></p>
 
-<p><a href="mailto:superrentalsrep@superrentals.com">superrentalsrep@superrentals.com</a></p>
-
+  <p><a href="mailto:superrentalsrep@superrentals.com">superrentalsrep@superrentals.com</a></p>
+</div>
 <p>{{#link-to "about"}}Read more about us!{{/link-to}}</p>
