Add some styles to application

--- a/app/templates/contact.hbs
+++ b/app/templates/contact.hbs
@@ -18,4 +18,4 @@
 
   <p><a href="mailto:superrentalsrep@superrentals.com">superrentalsrep@superrentals.com</a></p>
 </div>
-<p>{{#link-to "about"}}Read more about us!{{/link-to}}</p>
+<p>{{#link-to "about" class="button"}}Read more about us!{{/link-to}}</p>
