--- a/app/templates/about.hbs
+++ b/app/templates/about.hbs
@@ -4,5 +4,8 @@
 
   <p>It's like regular rentals, but super.</p>
 
-  <p>{{#link-to "contact"}}Don't contact us!{{/link-to}}</p>
+  <p>
+  {{#link-to "contact" class="button"}}
+    Don't contact us!
+  {{/link-to}}</p>
 </div>
