--- a/app/templates/components/rental-listing.hbs
+++ b/app/templates/components/rental-listing.hbs
@@ -1,5 +1,8 @@
 <article class="listing">
-  <img src="{{rental.image}}" class="image" alt="">
+  <a {{action 'toggleImageSize'}} class="image {{if isWide "wide"}}">
+    <img src="{{rental.image}}" alt="">
+    <small>View Larger</small>
+  </a>
   <h3>{{rental.title}}</h3>
   <div class="detail owner">
     <span>Owner:</span> {{rental.owner}}
@@ -14,9 +17,3 @@
     <span>Number of bedrooms:</span> {{rental.bedrooms}}
   </div>
 </article>
-{{#if isImageShowing}}
-  <p><img src={{rental.image}} alt={{rental.type}} width="500"></p>
-  <button {{action "imageHide"}}>Hide image</button>
-{{else}}
-  <button {{action "imageShow"}}>Show image</button>
-{{/if}}
